<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActvity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="51dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/Blue_color"
        android:gravity="center"
        android:text="@string/logo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_black_title"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/Macroeoconomic_usd"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox_1"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/gdp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/checkBox_2"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/fdi_inflow"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_1" />

    <CheckBox
        android:id="@+id/checkBox_3"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/fdi_outflow"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_2" />

    <CheckBox
        android:id="@+id/checkBox_4"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:text="@string/import_export"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_3" />

    <Button
        android:id="@+id/show_btn"
        android:layout_width="128dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_view"
        android:text="@string/show"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_4" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:text="USA"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/macroeconomics_table_image"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_btn"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/ic_baseline_analytics_24" />

    <ImageView
        android:id="@+id/agriculture_table_image"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/macroeconomics_table_image"
        app:layout_constraintTop_toTopOf="@+id/macroeconomics_table_image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_agriculture_24" />

    <ImageView
        android:id="@+id/debt_table_image"
        android:layout_width="62dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/agriculture_table_image"
        app:layout_constraintTop_toTopOf="@+id/agriculture_table_image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24" />
</androidx.constraintlayout.widget.ConstraintLayout>