<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnnotationsActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="51dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/Blue_color"
        android:gravity="center"
        android:text="@string/logo"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="243dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/round_black_title"
        android:gravity="center"
        android:text="@string/macroeconomic"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:text="USA"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/start_value"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/start_year_et"
        android:layout_width="81dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/end_year_et"
        android:layout_width="81dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_name" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="85dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/expitry_date"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/end_year_et"
        app:layout_constraintStart_toEndOf="@+id/start_year_et"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="373dp"
        android:layout_height="413dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_btn">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/gdp"
                    android:layout_width="336dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/inflow"
                    android:layout_width="336dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/outflow"
                    android:layout_width="336dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    />
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

    <Button
        android:id="@+id/annotations_btn"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_view"
        android:text="@string/annotations"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="97dp"
        android:layout_height="36dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/rounded_corner_view"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_year_et" />

    <ImageView
        android:id="@+id/macroeconomics_table_image"
        android:visibility="gone"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/annotations_btn"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_baseline_analytics_24" />

    <ImageView
        android:id="@+id/agriculture_table_image"
        android:layout_width="59dp"
        android:visibility="gone"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/macroeconomics_table_image"
        app:layout_constraintTop_toTopOf="@+id/macroeconomics_table_image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_agriculture_24" />

    <ImageView
        android:id="@+id/debt_table_image"
        android:layout_width="62dp"
        android:visibility="gone"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toEndOf="@+id/agriculture_table_image"
        app:layout_constraintTop_toTopOf="@+id/agriculture_table_image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24" />
</androidx.constraintlayout.widget.ConstraintLayout>